# python-us

./: .env  .gitignore  .travis.yml  LICENSE  MANIFEST.in  Pipfile  README.md  README.rst  build.py  circle.yml  county_schema.sql  data.db  load_county_data.py  pyproject.toml  requirements.txt  setup.py  tests.py  tox.ini
.circleci/: config.yml
.github/: CONTRIBUTING.md
.github/workflows/: pythonpackage.yml
tests/: test_us.py
us/: __init__.py  counties.pkl  counties.py  data.py  models.py  states.pkl  states.py  unitedstatesofamerica.py
us/cli/: states.py
us/tests/: conftest.py  test_timezones.py  test_us.py
